@@ -1,5 +1,7 @@
 DIST v1.0.tar.gz 39253525 SHA256 ab43370a97ee7c35b7336b9b8c90d3621e340b48bb2a9e75636bb49ded0825ec SHA512 58f32805fd7677586ba93fdad63675a5ad182c5c44f5048375494de08d2fd06a024293af3eb581a764f94d768d2c1483146e2dc86f93da4496fb2b4007de7ce1 WHIRLPOOL 78eb1e660f6a07856ace4ed5b5e07188fa5ecdb79689e556b860d51f5faa952f3e5dd4daaed39b590203bd1f05b980a3d453eeda63b5d928035f09bac6cb061f
-EBUILD renderdoc-1.0.ebuild 945 SHA256 280aeca8b78d86f6881aa79310cccc84d410b0936f4c2fc740bdd5f7b2e4778a SHA512 b3edcd1c14b4bee5f0a9f68dcfa3d59f1c4402d66e56500e2be2081e9c1506ee42237df1971937188f0bde8590f1df0079aea55ebe913b30f4af3931494ded79 WHIRLPOOL 8a9ba3bf1b15cc3f06d63485ac7e361ab7f874c9cded11baef0effab2ed4c2c79c639d3dc3eab4a6a34db12074d5a830287221dd07c5f0254113c0d1d10480a4
-EBUILD renderdoc-9999.ebuild 959 SHA256 445c04b2adff5162aa22fb81b5eb0e54bbae5424754479ef22547658710c7d71 SHA512 e8151a45f98509d79013c22d604f9d6b28e6194494db50e9832015e5d6bba747353991e53574fded392fb61634ffed42623a3ef6037a5be4b5873c165f4061b6 WHIRLPOOL 1c046c15238cf886767adb1edd70d0a0e6a2c4976b9487b746aaf42cc7b3c478c771d20f0d5e585ed0de5995d369ece4119bd08ba66db32a3216a045d0296d25
-MISC ChangeLog 284 SHA256 e67034b9b26cfaff995d02f6ba4e3568b4a88661b6239059fa39b87eb21852b5 SHA512 8aaadf879e9899d51042d1efd67dad0b08308a901e0cf78d71f7054db9e23231909c9191c64e3c311d2b987187c32c8c582704c730ed916b2091b6fe7b1840a5 WHIRLPOOL d93d76f27bc49553afc83e365cb21139e1d13aaed7cd2d377bba487d9c3ec22f5ce4a965eb8a96f133c2ee6ea8d43e1c0a93ad60730f5bb4f0ecd713367c5e19
+DIST v1.1.tar.gz 39779466 SHA256 3ee45f892f6020cadb1b5604021122fa812ac807241065336db092c98472087c SHA512 40486cfcd75227a68b34b3fcf3e94a527eb23e79c842c7c88a70172d1d14d4c13de937310a3923573818967e341913fd5c6d14c1b3e12328eadfbcf91a566d40 WHIRLPOOL fd61d5998f4690054343c003258c3dafd27178d90914537915d7123812ded181c9c191c34dc95489a8f32c7f9e9d13ca37a7e53d42eadb141eab106c3e92c27c
+EBUILD renderdoc-1.0.ebuild 874 SHA256 b9340aebfd99108ba0b4ca1429ac89bfe1abac733fe5b4519afb4c9a7bcdb0e8 SHA512 8dc2fa9ad6a4c8d3da22b4199bfd7cb069fd7d0f8f5a378446897fab734ab2a1e253e2a980054b4d5dd7f1835d01525d2fba8632b66920c469f641a92935e0b1 WHIRLPOOL 792b3e777d2b07d4e3bc83bbe12bed106e9c82044364be54348f57c4f5f24dfc9527b76d55490836180109e908d5800827e3cb37e6d6720dc87ac7dd637ea7c7
+EBUILD renderdoc-1.1.ebuild 874 SHA256 b9340aebfd99108ba0b4ca1429ac89bfe1abac733fe5b4519afb4c9a7bcdb0e8 SHA512 8dc2fa9ad6a4c8d3da22b4199bfd7cb069fd7d0f8f5a378446897fab734ab2a1e253e2a980054b4d5dd7f1835d01525d2fba8632b66920c469f641a92935e0b1 WHIRLPOOL 792b3e777d2b07d4e3bc83bbe12bed106e9c82044364be54348f57c4f5f24dfc9527b76d55490836180109e908d5800827e3cb37e6d6720dc87ac7dd637ea7c7
+EBUILD renderdoc-9999.ebuild 888 SHA256 5a5c10e0ff74065dd2dd2016c888d15a890d2c12482bb5b7c68c971ce78946d9 SHA512 54959e6b37aa5c8091c1693dadbd3b03fb37b9222a8dfd1751b8dd8f3e93a71cf1d7036320cc08fda4c1e9efaee60d095a5289ddbc8242fca2b4fafc8077341a WHIRLPOOL e209314a3fbff6fe2809cb4ba734821e6d49a69dbe9ffee2a5c60d4feeb946e9f3f4b27aa15ccc3e347631771acea18cc51f4186cda9cec554dbd22917ddc944
+MISC ChangeLog 516 SHA256 4e6db1411d0803d6cf32770569cb0cf37c3fa9a802192d0ff36640f0841aa81e SHA512 bf57e8aa4926c7fd9f5cce11ff575746de2cb19cc7ff5b86df16cac40e82f7306cfcd0558bda98f9263e27f22f518c4ba4f770b075244d7f933dcd2e279265dd WHIRLPOOL 27e629a662b48a6aeac52cd0549bc4491c1233d904318db35742cd047c880c632a5e8c057b1689734eb241dbc95192b7501b1d3e9ef095a504e9a70eb09d1c13
 MISC metadata.xml 617 SHA256 e9fbacbe415bc07df43e7f8e712ab879f7cdd471e7fb8eca804494103418b8fc SHA512 4cad8316dce107b2cd7e7eb426a106388563955c5ba333b1fcb024c4265c0d7b2fca78dcb2abdfd737fb8fe06066af22a3fec7d0db66870ba2f6739e7b9bea77 WHIRLPOOL 094c37a0562e2f09d9998d06d4917b474f599a57804a09300dba83e3fe8d489e4781d2d5924208fccb1bdea866fd42cac7abae9f72083284f24b8bb75e1d5a83
